Refactor FAQ controller with type-safe VO classes and improved data handling
Co-authored-by: rndhx88932 <rndhx88932@outlook.com>